- Backport pause button fix from trunk
- Backport webseed fix from trunk
- Backport log rotate fix from trunk
- Backport fix for queueingNotPossible multiple message error
- Backport fix for group policy not being applied when using drag and drop
- Backport initial logrotate showing progress info fix
- Backport files get created in diskspace check fix

Changes in 3.1.5 :
- Make sure symlinks work when we create multifile torrents
- Fix redirect loop when torrent is loaded via url in webgui (173513)
- Fix infinite recursive loop in scanfolder plugin
- Fix crash in treeviews caused by Qt bug (172198)
- Prevent error messages when KT is started up via desktop file
- Use multiple tiers when creating torrents with multiple trackers (174207)
- Make sure stalled time is updated properly before resuming queue (174373)
- Prevent QM from starting torrents which are being removed (175081)
- Fix bug preventing max seed time to be set on newly opened torrents
- Fix bug causing torrent to be started when user chooses not to start the
torrent in the fileselectdlg

Changes in 3.1.4 :
- Make sure user is properly logged in when handling a torrent post in the webgui
- Prevent PHP injection attacks in webgui
- Update file size in CacheFile::growFile, this fixes a SIGBUS error (172814)
- Fix bug causing infinite DNS lookups in UDP tracker when lookup fails
- Remove default label text KSqueezedTextLabel in trackerview (173065)

Changes in 3.1.3 :
- Make login into webinterface secure
- Check if menus are created properly before showing them
- Stop KT from exiting when scanfolder loads a plugin silently and KT is hidden in systray.
- Make sure duplicate URL's are not shown in trackerview
- Fix problem causing file priorities not to be read at startup
- Make sure added.f is filled in with the proper flags for each peer in the added field of a PEX message (169014)
- Make sure it is not required to put http:// for the proxy in the config dialog (169133)
- Fix typo in advanced pref