@@ -20,8 +20,8 @@
 #include "log.h"
 #include <stdlib.h>
 #include <kurl.h>
-#include <klocale.h>
 #include <kio/copyjob.h>
+#include <klocale.h>
 #include <QTextStream>
 #include <qfile.h>
 #include <qlist.h>
