@@ -9,6 +9,7 @@ Changes in 3.1.6 :
 - Backport fix for group policy not being applied when using drag and drop
 - Backport initial logrotate showing progress info fix
 - Backport files get created in diskspace check fix
+- Backport file encoding fix
 
 Changes in 3.1.5 :
 - Make sure symlinks work when we create multifile torrents
